Migrating java.base to use Stream.toList()