@@ -293,7 +293,7 @@ public final class IllegalAccessLogger {
         List<StackWalker.StackFrame> stack = StackWalkerHolder.INSTANCE.walk(s ->
             s.dropWhile(this::isJavaBase)
              .limit(32)
-             .collect(Collectors.toList())
+             .toList()
         );
 
         // record usage if this is the first (or not recently recorded)
